fixed buttons that are too low

--- a/src/css/ProductItem.css
+++ b/src/css/ProductItem.css
@@ -16,7 +16,7 @@
 
 .productItem__title {
   position: relative;
-  top: 15%;
+  top: 5vh;
 }
 
 h2 {
@@ -34,7 +34,7 @@ h4 {
 
 .productItem__buttons {
   position: relative;
-  top: 70vh;
+  top: 80vh;
 }
 
 button {
@@ -57,6 +57,10 @@ button {
 }
 
 @media only screen and (max-width: 700px) {
+  .productItem__title {
+    top: -13vh;
+  }
+
   h2 {
     /* font-size: 8vw; */
     margin: 0 10vw 0;
@@ -70,7 +74,8 @@ button {
 
 @media only screen and (max-width: 600px) {
   .productItem__buttons {
-    top: 55vh;
+    top: 70vh;
+    margin-bottom: 10vh;
   }
 
   button {
